--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,8 @@
     <string name="etRLName">last name</string>
     <string name="etREMail">eMail</string>
     <string name="etRCity">city</string>
+
+    <string name="title_activity_registration">Settings</string>
+
+    <string name="title_activity_maps">Map</string>
 </resources>
